<resources>
    <string name="app_name">MobileAssignment</string>
    <string name="button_addEvent">Add Event</string>
    <string name="hint_eventTitle">Event Title</string>
    <string name="hint_eventDescription">Event Description</string>
    <string name="hint_eventLocation">Event Location\n</string>
    <string name="end_time">End Time</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">Start Date</string>
    <string name="standard_icon_btn_desc">Arrow icon</string>
    <string name="default_start_time">8:00 AM</string>
    <string name="default_end_time">9:00 AM</string>
    <string name="display_event_time">Event time</string>
    <string name="selectedDAte">Selected date</string>
    <string name="add_button">Add Event</string>
    <string name="my_app_name">TrackIt</string>
    <string name="button_save_event"> Save Event </string>
    <string name="enter_a_title">Please enter a title</string>
    <string name="date_selection_error">End date should be no earlier than the start date</string>
    <string name="time_selection_error">"End time should be no earlier than the start time "</string>
    <string name="adding_event_cancelled">Adding Event Cancelled</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="set_start_time">Set start time</string>
    <string name="set_end_time">Set end time</string>
</resources>