<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/viewEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hint_eventTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hint_eventDescription"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/viewEventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/display_event_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/viewEventLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hint_eventLocation"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>